# macro-expand

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yaml
docker/: build.sh
docs/: Doxyfile
include/misra-tidy/common/: assignee-data.hpp  call-data.hpp  canonical-location.hpp  definition-data.hpp  location.hpp  offset.hpp  range.hpp  routines.hpp
include/misra-tidy/macro-expand/: action-factory.hpp  action.hpp  macro-search.hpp  options.hpp  query.hpp
source/: CMakeLists.txt
source/common/: CMakeLists.txt  assignee-data.cpp  call-data.cpp  canonical-location.cpp  definition-data.cpp  location.cpp  offset.cpp  range.cpp  routines.cpp
source/macro-expand/: CMakeLists.txt  action-factory.cpp  action.cpp  macro-search.cpp
source/macro-expand-exe/: macro-expand.cpp  result.cpp  result.hpp  search.cpp  search.hpp
